--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,11 +2,7 @@ name: Build Release Artifact
 
 on:
   workflow_dispatch:
-    inputs:
-      version_bump:
-        description: "npm version: patch | minor | major | none"
-        required: true
-        default: "none"
+    inputs: {}
 
 jobs:
   build:
@@ -29,9 +25,12 @@ jobs:
       - name: Build
         run: yarn build:lib
 
-      - name: Optional version bump
-        if: ${{ github.event.inputs.version_bump != 'none' }}
-        run: npm version ${{ github.event.inputs.version_bump }} --no-git-tag-version
+      - name: Set release version
+        id: version
+        run: |
+          TAG="v$(node -p \"require('./package.json').version\")"
+          echo "tag=${TAG}" >> "$GITHUB_OUTPUT"
+          echo "Using tag ${TAG}"
 
       - name: Package artifact
         run: |
@@ -47,3 +46,23 @@ jobs:
         with:
           name: ui-toolkit-dist
           path: ui-toolkit-dist.zip
+
+      - name: Create GitHub Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.version.outputs.tag }}
+          release_name: ${{ steps.version.outputs.tag }}
+          draft: false
+          prerelease: false
+
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.version.outputs.upload_url || github.event.repository.releases_url }}
+          asset_path: ui-toolkit-dist.zip
+          asset_name: ui-toolkit-dist.zip
+          asset_content_type: application/zip
